--- a/templates/index.html
+++ b/templates/index.html
@@ -265,8 +265,8 @@
         <span class="text13-2">Remember me</span>
         <button class="btlogin">login</button>
         <a href="рпи" onclick="return false"><span class="text13-4">Forgot your password?</span></a>
-        <a href="https://facebook.com""><span class="facebook"><i class="fab fa-facebook-f"></i></span></a>
-        <a href="https://gmail.com"><span class="g"><i class="fab fa-google-plus-g"></i></span></a>
+        <a href="https://facebook.com" target="_blank"><span class="facebook"><i class="fab fa-facebook-f"></i></span></a>
+        <a href="https://gmail.com" target="_blank"><span class="g"><i class="fab fa-google-plus-g"></i></span></a>
         <span class="text13-5">Don’t have an accont? <a href="рпи" onclick="return false">Sign in</a></span>
     </div> 
     <div class="block14">
@@ -278,8 +278,8 @@
         <input type="text" class="password2" placeholder="password">
         <input type="text" class="rppassword" placeholder="repeat password">
         <button class="btsignup">sign up</button>
-        <a href="https://facebook.com""><span class="facebook2"><i class="fab fa-facebook-f"></i></span></a>
-        <a href="https://gmail.com""><span class="g2"><i class="fab fa-google-plus-g"></i></span></a>
+        <a href="https://facebook.com" target="_blank"><span class="facebook2"><i class="fab fa-facebook-f"></i></span></a>
+        <a href="https://gmail.com" target="_blank"><span class="g2"><i class="fab fa-google-plus-g"></i></span></a>
         <span class="text14-5">By joining LEMON, you agree to our </span>
         <a href="рпи" onclick="return false"><span class="text14-6">Terms of Service.</span></a>
         <a href="рпи" onclick="return false"><span class="text14-7">login</span></a>
