--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1692,6 +1692,7 @@ body {
     top:2760px;
 }
 /* ======================ARTYOM===============*/
+
 .block11 {
     width: 290px;
     height: 160px;
@@ -1720,7 +1721,7 @@ body {
     width: 36px;
     height: 19px;
     top: 26px;
-    left: 17px;
+    left: 17px;   
 }
 .second {
     width: 76px;
@@ -1765,7 +1766,7 @@ body {
     top: 46px;
     left: 25px;
 }
-.text11-1 {
+.text11-1-1 {
     width: 237px;
     height: 68px;
     color: #000000;
@@ -1777,10 +1778,43 @@ body {
     line-height: 3;
     text-align: left;
     text-transform: uppercase;
-    font-style: normal;
     line-height: normal;
     position: absolute;
     top: 63px;
+    left: 23px;
+}
+.text11-1-2 {
+    width: 237px;
+    height: 68px;
+    color: #000000;
+    font-family: "Josefin Sans";
+    font-size: 12px;
+    font-weight: 300;
+    font-style: normal;
+    /*letter-spacing: normal;*/
+    line-height: 3;
+    text-align: left;
+    text-transform: uppercase;
+    line-height: normal;
+    position: absolute;
+    top: 93px;
+    left: 23px;
+}
+.text11-1-3 {
+    width: 237px;
+    height: 68px;
+    color: #000000;
+    font-family: "Josefin Sans";
+    font-size: 12px;
+    font-weight: 300;
+    font-style: normal;
+    /*letter-spacing: normal;*/
+    line-height: 3;
+    text-align: left;
+    text-transform: uppercase;
+    line-height: normal;
+    position: absolute;
+    top: 123px;
     left: 23px;
 }
 .block12 {
@@ -1815,7 +1849,7 @@ body {
     height: 9px;
     color: #555555;
     font-family: "Font Awesome";
-    font-size: 14px;
+    font-size: -14px;
     font-weight: 400;
     text-align: left;
     font-style: normal;
@@ -1921,6 +1955,17 @@ body {
     top: 116px;
     left: 32px;
 }
+input {
+    color: #000000;
+    font-family: "Josefin Sans";
+    font-size: 20px;
+    font-weight: 400;
+    letter-spacing: normal;
+    text-align: left;
+    font-style: normal;
+    letter-spacing: 0.4px;
+    line-height: normal;
+}
 input::placeholder {
     width: 150px;
     height: 16px;
@@ -1965,13 +2010,13 @@ input::placeholder {
     border-radius: 20%;
 }
 .text13-2 {
-    width: 90px;
+    width: 100px;
     height: 10px;
-    opacity: 0.5;
+    opacity: 0.54;
     color: #000000;
     font-family: "Josefin Sans";
     font-size: 12px;
-    font-weight: 400;
+    font-weight: 600;
     font-style: normal;
     letter-spacing: normal;
     line-height: normal;
@@ -1979,7 +2024,7 @@ input::placeholder {
     letter-spacing: 0.3px;
     transform: skew(-7deg);
     position: absolute;
-    top: 232px;
+    top: 234px;
     left: 48px;
 }
 .btlogin {
@@ -2021,16 +2066,18 @@ input::placeholder {
     letter-spacing: 0.3px;
 }
 button:hover {
-    background-color: #9fcfeb;
+    background-color: #c2c2c2;
+    cursor: pointer;
 }
+    
 .text13-4 {
     width: 150px;
     height: 10px;
-    opacity: 0.5;
+    opacity: 0.54;
     color: #000000;
     font-family: "Josefin Sans";
     font-size: 12px;
-    font-weight: 400;
+    font-weight: 600;
     font-style: normal;
     letter-spacing: normal;
     line-height: normal;
@@ -2038,14 +2085,14 @@ button:hover {
     letter-spacing: 0.3px;
     transform: skew(-7deg);
     position: absolute;
-    top: 232px;
+    top: 234px;
     left: 178px;
 
 }
 .facebook {
     position: absolute;
     top: 327px;
-    left: 135px;
+    left: 135px; 
     width: 12px;
     height: 22px;
     color: #555555;
@@ -2056,12 +2103,12 @@ button:hover {
     letter-spacing: normal;
     line-height: normal;
     text-align: left;
-    letter-spacing: 0.3px;
+    letter-spacing: 0.3px;   
 }
 .facebook2 {
     position: absolute;
     top: 399px;
-    left: 137px;
+    left: 137px; 
     width: 12px;
     height: 22px;
     color: #555555;
@@ -2072,12 +2119,12 @@ button:hover {
     letter-spacing: normal;
     line-height: normal;
     text-align: left;
-    letter-spacing: 0.3px;
+    letter-spacing: 0.3px;   
 }
 .g {
     position: absolute;
     top: 330px;
-    left: 169px;
+    left: 169px;    
     width: 29px;
     height: 19px;
     color: #555555;
@@ -2088,11 +2135,11 @@ button:hover {
     letter-spacing: normal;
     text-align: left;
     letter-spacing: 0.55px;
-}
+} 
 .g2 {
     position: absolute;
     top: 402px;
-    left: 171px;
+    left: 171px;    
     width: 29px;
     height: 19px;
     color: #555555;
@@ -2103,7 +2150,7 @@ button:hover {
     letter-spacing: normal;
     text-align: left;
     letter-spacing: 0.55px;
-}
+} 
 .text13-5 {
     width: 250px;
     height: 16px;
@@ -2119,7 +2166,8 @@ button:hover {
     letter-spacing: 0.4px;
     position: absolute;
     top: 367px;
-    left: 64px;
+    left: 64px;  
+    transform: skew(-7deg);
 }
 .block14 {
     width: 328px;
@@ -2203,6 +2251,7 @@ button:hover {
     position: absolute;
     top: 448px;
     left: 35px;
+    transform: skew(-7deg);
 }
 .text14-6 {
     width: 216px;
@@ -2218,6 +2267,7 @@ button:hover {
     position: absolute;
     top: 463px;
     left: 35px;
+    transform: skew(-7deg);
 }
 .text14-7 {
     width: 36px;
@@ -2235,7 +2285,6 @@ button:hover {
     top: 494px;
     left: 39px;
 }
-
 
 /* ===================PASHASASHSHASHA============= */
 /*------------------------block 15-----------------------*/
