--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
         <a href="#" class="text0-3">PHOTO GALLERIES</a>
         <a href="#" class="text0-4">VIDEOS</a>
         <a href="#" class="text0-5">ALL CATEGORIES</a>
-        <input type="text" class="find" placeholder="&#61442; FIND A RECIPE">
+        <input type="text" class="find" placeholder="&#61442;  FIND A RECIPE">
     </div>
 
     <div class="block1">
@@ -170,13 +170,13 @@
     <div class="block7">
         <span class="text7-1">Recipe</span>
         <img src="../styles/images/Ivan/line.png" class="line7-1">
-        <span class="text7-2">easy</span>
-        <span class="text7-3">middle</span>
-        <span class="text7-4">long</span>
+        <a href="#text7-2" class="text7-2">easy</a>
+        <a href="#text7-3" class="text7-3">middle</a>
+        <a href="#text7-4" class="text7-4">long</a>
         <img src="../styles/images/Ivan/salat.png" class="photo7-1" >
         <img src="../styles/images/Ivan/cocos.png" class="photo7-2" >
         <img src="../styles/images/Ivan/hands.png" class="photo7-3" >
-        <a href="#viewbutton"><button class="viewbutton" >VIEW MORE</button></a>
+        <button class="viewbutton" >VIEW MORE</button>
 
         <span class="text7-5">by</span>
         <span class="text7-6">Smuckersreg Toppings</span>
@@ -191,9 +191,9 @@
         <span class="text7-13">Thanks for the recipe lorem nks for the recipe</span>
 
         <a href="javascript:(print());"> <span class="icons7-1"> <i class="fa fa-print"></i></span></a>
-        <a href="https://www.gmail.com/"> <span class="icons7-2"> <i class="fa fa-regular fa-envelope"></i></span></a>
-        <a href="https://www.facebook.com/"> <span class="icons7-3"> <i class="fab fa-facebook-f"></i></span></a>
-        <a href="https://www.pinterest.com/"> <span class="icons7-4  "> <i class="fab fa-pinterest"></i></span></a>
+        <a href="https://www.gmail.com/" target="_blank"> <span class="icons7-2"> <i class="fa fa-regular fa-envelope"></i></span></a>
+        <a href="https://www.facebook.com/" target="_blank"> <span class="icons7-3"> <i class="fab fa-facebook-f"></i></span></a>
+        <a href="https://www.pinterest.com/" target="_blank"> <span class="icons7-4  "> <i class="fab fa-pinterest"></i></span></a>
     </div>
     <div class="block8">
         <img class="photo8-1" src="../styles/images/Ivan/cofe.png">
@@ -207,7 +207,7 @@
         <span class="text8-8"><i class="fa fa-regular fa-eye"></i></span>
         <span class="text8-9">400</span>
         <div class="line8-1"></div>
-        <a href="#viewbutton8-1"><button class="viewbutton8-1" id="viewbutton8-1">GET IT RECIPE</button></a>
+        <button class="viewbutton8-1">GET IT RECIPE</button>
     </div>
     <div class="block9">
         <span class="text9-1">Target</span>
@@ -228,17 +228,17 @@
         <span class="text9-9">19%</span>
         <span class="text9-10">65%</span>
         <span class="text9-11">50%</span>
-        <a href=""> <span class="icons9-1"> <i class="fa fa-print"></i></span></a>
-        <a href="https://www.gmail.com/"> <span class="icons9-2"> <i class="fa fa-regular fa-envelope"></i></span></a>
-        <a href="https://www.facebook.com/"> <span class="icons9-3"> <i class="fab fa-facebook-f"></i></span></a>
-        <a href="https://www.pinterest.com/"> <span class="icons9-4  "> <i class="fab fa-pinterest"></i></span></a>
+        <a href="javascript:(print());"> <span class="icons9-1"> <i class="fa fa-print"></i></span></a>
+        <a href="https://www.gmail.com/" target="_blank"> <span class="icons9-2"> <i class="fa fa-regular fa-envelope"></i></span></a>
+        <a href="https://www.facebook.com/" target="_blank"> <span class="icons9-3"> <i class="fab fa-facebook-f"></i></span></a>
+        <a href="https://www.pinterest.com/" target="_blank"> <span class="icons9-4  "> <i class="fab fa-pinterest"></i></span></a>
     </div>
     <div class="block10">
         <span class="text10-1">Timeline</span>
-        <a href=""> <span class="icons10-1"> <i class="fa fa-print"></i></span></a>
-        <a href="https://www.gmail.com/"> <span class="icons10-2"> <i class="fa fa-regular fa-envelope"></i></span></a>
-        <a href="https://www.facebook.com/"> <span class="icons10-3"> <i class="fab fa-facebook-f"></i></span></a>
-        <a href="https://www.pinterest.com/"> <span class="icons10-4  "> <i class="fab fa-pinterest"></i></span></a>
+        <a href="javascript:(print());"> <span class="icons10-1"> <i class="fa fa-print"></i></span></a>
+        <a href="https://www.gmail.com/" target="_blank"> <span class="icons10-2"> <i class="fa fa-regular fa-envelope"></i></span></a>
+        <a href="https://www.facebook.com/" target="_blank"> <span class="icons10-3"> <i class="fab fa-facebook-f"></i></span></a>
+        <a href="https://www.pinterest.com/" target="_blank"> <span class="icons10-4  "> <i class="fab fa-pinterest"></i></span></a>
         <img src="../styles/images/Ivan/line.png" class="line10-1">
         <span class="text10-2">Time line</span>
         <span class="text10-3">Eam adhuc iudico percipitur ex, ut malis audire voluptaria has.</span>
