--- a/templates/index.html
+++ b/templates/index.html
@@ -63,11 +63,11 @@
 
     <div class="block2">
         <img src="../styles/images/Dima/Photo2-1.png" class="Photo2-1">
-        <span class="text2-1">Raspberry & Cream Frozen Yogurt Pie</span>
+        <a href="text2-1" class="text2-1">Raspberry & Cream Frozen Yogurt Pie</a>
         <img src="../styles/images/Dima/Photo2-2.png" class="Photo2-2">
-        <span class="text2-2">Giant Ice Cream Sandwich</span>
+        <a href="text2-2" class="text2-2">Giant Ice Cream Sandwich</a>
         <img src="../styles/images/Dima/Photo2-3.png" class="Photo2-3">
-        <span class="text2-3">Dark Chocolate Crunch Ice Cream Sandwich Cake</span>
+        <a href="text2-3" class="text2-3">Dark Chocolate Crunch Ice Cream Sandwich Cake</a>
         <span class="text2-4"><i class="fa fa-regular fa-clock"></i></span>
         <span class="text2-5">35mins</span>
         <div class="line2-1"></div>
@@ -261,7 +261,7 @@
         <div class="line one"></div>
         <span class="text11-1-1">#yummy   #sweet   #dinner   #lunch</span>
         <span class="text11-1-2">#breakfast   #fresh   #tasty   #delish</span>
-        <span class="text11-1-3">#delicious   #eating   #food</span>            
+        <span class="text11-1-3">#delicious   #eating   #food</span>
     </div>
     <div class="block12">
         <span class="text second">Calendar</span>
@@ -271,7 +271,7 @@
         <span class="text12-3">June 2017</span>
         <span class="text12-4"><ins>Su</ins>     <ins>Mo</ins>     <ins>Tu</ins>     <ins>We</ins>     <ins>Th</ins>     <ins>Fr</ins>     <ins>Sa</ins></span>
         <img src="../styles/images/Artyom/calendar.png" alt="" class="calendar">
-    </div>    
+    </div>
     <div class="block13">
         <span class="text third">Login</span>
         <div class="line three"></div>
@@ -285,7 +285,7 @@
         <a href="https://facebook.com" target="_blank"><span class="facebook"><i class="fab fa-facebook-f"></i></span></a>
         <a href="https://gmail.com" target="_blank"><span class="g"><i class="fab fa-google-plus-g"></i></span></a>
         <span class="text13-5">Don’t have an accont? <a href="рпи" onclick="return false">Sign in</a></span>
-    </div> 
+    </div>
     <div class="block14">
         <span class="text fourth">Sign in</span>
         <div class="line three"></div>
@@ -298,7 +298,7 @@
         <a href="https://facebook.com" target="_blank"><span class="facebook2"><i class="fab fa-facebook-f"></i></span></a>
         <a href="https://gmail.com" target="_blank"><span class="g2"><i class="fab fa-google-plus-g"></i></span></a>
         <span class="text14-5">By joining LEMON, you agree to our </span>
-        <a href="рпи" onclick="return false"><span class="text14-6">Terms of Service.</span></a>
+        <a href="../styles/images/123.jpg" target="_blank"><span class="text14-6">Terms of Service.</span></a>
         <a href="рпи" onclick="return false"><span class="text14-7">login</span></a>
     </div>
 </div>
