--- a/templates/index.html
+++ b/templates/index.html
@@ -63,11 +63,11 @@
 
     <div class="block2">
         <img src="../styles/images/Dima/Photo2-1.png" class="Photo2-1">
-        <a href="text2-1" class="text2-1">Raspberry & Cream Frozen Yogurt Pie</a>
+        <a href="#text2-1" class="text2-1">Raspberry & Cream Frozen Yogurt Pie</a>
         <img src="../styles/images/Dima/Photo2-2.png" class="Photo2-2">
-        <a href="text2-2" class="text2-2">Giant Ice Cream Sandwich</a>
+        <a href="#text2-2" class="text2-2">Giant Ice Cream Sandwich</a>
         <img src="../styles/images/Dima/Photo2-3.png" class="Photo2-3">
-        <a href="text2-3" class="text2-3">Dark Chocolate Crunch Ice Cream Sandwich Cake</a>
+        <a href="#text2-3" class="text2-3">Dark Chocolate Crunch Ice Cream Sandwich Cake</a>
         <span class="text2-4"><i class="fa fa-regular fa-clock"></i></span>
         <span class="text2-5">35mins</span>
         <div class="line2-1"></div>
