--- a/templates/index.html
+++ b/templates/index.html
@@ -337,7 +337,7 @@
         <span class="text16-9">post by</span>
         <span class="text16-10">post by</span>
         <span class="text16-11">Thanks for the recipe lorem ipsum bla bla bla Thanks for the recipe lore</span>
-        <span class="text16-12">24 more comments</span>
+        <a href="#text16-12" class="text16-12">24 more comments</a>
         <a href="#reply16-2" class="reply16-2">reply</a>
         <a href="#reply16-3" class="reply16-3">reply</a>
         <span class="t456-1">456</span>
