--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2731,6 +2731,7 @@ button:hover {
     font-weight: 600;
 }
 .text16-12{
+    color: black;
     opacity: 0.5;
     font-size: 16px;
     line-height: 1.2;
