Fixed my blocks

--- a/templates/index.html
+++ b/templates/index.html
@@ -38,112 +38,161 @@
 
 <body>
 <div class="DIMA">
+
     <div class="header">
         <a href="#"><img src="../styles/images/Dima/LogoSmall.png" class="LogoSmall"></a>
-        <a href="#" class="text0-1">HOME</a>
-        <a href="#" class="text0-2">RECIPES</a>
-        <a href="#" class="text0-3">PHOTO GALLERIES</a>
-        <a href="#" class="text0-4">VIDEOS</a>
-        <a href="#" class="text0-5">ALL CATEGORIES</a>
+        <nav>
+            <ul class="nav__links">
+                <li><a href="#" class="text0-1">HOME</a></li>
+                <li><a href="#" class="text0-2">RECIPES</a></li>
+                <li><a href="#" class="text0-3">PHOTO GALLERIES</a></li>
+                <li><a href="#" class="text0-4">VIDEOS</a></li>
+                <li><a href="#" class="text0-5">ALL CATEGORIES</a></li>
+            </ul>
+        </nav>
         <input type="text" class="find" placeholder="&#61442;  FIND A RECIPE">
     </div>
 
     <div class="block1">
-        <img src="../styles/images/Dima/Photo1-1.png" class="Photo1-1">
-        <img src="../styles/images/Dima/Logo.png" class="Logo1">
-        <span class="text1-1">Bananas Foster Ice Cream Cake</span>
-        <span class="text1-2">If you're looking for decadence, look no further — you've found the Holy Grail of desserts. Honestly, this cake makes us wonder why Bananas Foster hasn't always been served on top of ice cream cake.</span>
-        <button class="btn1-1">GET IT RECIPE</button>
-        <div class="dot1-1"></div>
-        <div class="dot1-2"></div>
-        <div class="dot1-3"></div>
-        <div class="dot1-4"></div>
-        <div class="dot1-5"></div>
+        <div class="block1-content">
+            <ul class="left-panel1">
+                <li><img src="../styles/images/Dima/Logo.png" class="Logo1"></li>
+                <li><span class="text1-1">Bananas Foster Ice Cream Cake</span></li>
+                <li><span class="text1-2">If you're looking for decadence, look no further — you've found the Holy Grail of desserts. Honestly, this cake makes us wonder why Bananas Foster hasn't always been served on top of ice cream cake.</span></li>
+                <li><button class="btn1-1">GET IT RECIPE</button></li>
+            </ul>
+            <div class="right-panel1">
+                <ul class="dot-nav-1">
+                    <li class="dot1-1"></li>
+                    <li class="dot1-2"></li>
+                    <li class="dot1-3"></li>
+                    <li class="dot1-4"></li>
+                    <li class="dot1-5"></li>
+                </ul>
+            </div>
+        </div>
     </div>
 
     <div class="block2">
-        <img src="../styles/images/Dima/Photo2-1.png" class="Photo2-1">
-        <a href="#text2-1" class="text2-1">Raspberry & Cream Frozen Yogurt Pie</a>
-        <img src="../styles/images/Dima/Photo2-2.png" class="Photo2-2">
-        <a href="#text2-2" class="text2-2">Giant Ice Cream Sandwich</a>
-        <img src="../styles/images/Dima/Photo2-3.png" class="Photo2-3">
-        <a href="#text2-3" class="text2-3">Dark Chocolate Crunch Ice Cream Sandwich Cake</a>
-        <span class="text2-4"><i class="fa fa-regular fa-clock"></i></span>
-        <span class="text2-5">35mins</span>
-        <div class="line2-1"></div>
-        <span class="text2-6"><i class="fa fa-regular fa-comment"></i></span>
-        <span class="text2-7">7</span>
-        <span class="text2-8"><i class="fa fa-regular fa-eye"></i></span>
-        <span class="text2-9">14</span>
+        <div class="content2-1">
+            <img src="../styles/images/Dima/Photo2-1.png" class="Photo2-1">
+            <a href="#text2-1" class="text2-1">Raspberry & Cream Frozen Yogurt Pie</a>
+            <div class="info2-1">
+                <span class="text2-4"><i class="fa fa-regular fa-clock"></i></span>
+                <span class="text2-5">35mins</span>
+                <div class="line2-1"></div>
+                <span class="text2-6"><i class="fa fa-regular fa-comment"></i></span>
+                <span class="text2-7">7</span>
+                <span class="text2-8"><i class="fa fa-regular fa-eye"></i></span>
+                <span class="text2-9">14</span>
+            </div>
+        </div>
 
-        <span class="text2-4-2"><i class="fa fa-regular fa-clock"></i></span>
-        <span class="text2-5-2">20mins</span>
-        <div class="line2-1-2"></div>
-        <span class="text2-6-2"><i class="fa fa-regular fa-comment"></i></span>
-        <span class="text2-7-2">4</span>
-        <span class="text2-8-2"><i class="fa fa-regular fa-eye"></i></span>
-        <span class="text2-9-2">356</span>
+        <div class="content2-2">
+            <img src="../styles/images/Dima/Photo2-2.png" class="Photo2-2">
+            <a href="#text2-2" class="text2-2">Giant Ice Cream Sandwich</a>
+            <div class="info2-2">
+                <span class="text2-4-2"><i class="fa fa-regular fa-clock"></i></span>
+                <span class="text2-5-2">20mins</span>
+                <div class="line2-1-2"></div>
+                <span class="text2-6-2"><i class="fa fa-regular fa-comment"></i></span>
+                <span class="text2-7-2">4</span>
+                <span class="text2-8-2"><i class="fa fa-regular fa-eye"></i></span>
+                <span class="text2-9-2">356</span>
+            </div>
+        </div>
 
-        <span class="text2-4-3"><i class="fa fa-regular fa-clock"></i></span>
-        <span class="text2-5-3">15mins</span>
-        <div class="line2-1-3"></div>
-        <span class="text2-6-3"><i class="fa fa-regular fa-comment"></i></span>
-        <span class="text2-7-3">4</span>
-        <span class="text2-8-3"><i class="fa fa-regular fa-eye"></i></span>
-        <span class="text2-9-3">167</span>
+        <div class="content2-3">
+            <img src="../styles/images/Dima/Photo2-3.png" class="Photo2-3">
+            <a href="#text2-3" class="text2-3">Dark Chocolate Crunch Ice Cream Sandwich Cake</a>
+            <div class="info2-3">
+                <span class="text2-4-3"><i class="fa fa-regular fa-clock"></i></span>
+                <span class="text2-5-3">15mins</span>
+                <div class="line2-1-3"></div>
+                <span class="text2-6-3"><i class="fa fa-regular fa-comment"></i></span>
+                <span class="text2-7-3">4</span>
+                <span class="text2-8-3"><i class="fa fa-regular fa-eye"></i></span>
+                <span class="text2-9-3">167</span>
+            </div>
+        </div>
     </div>
 
     <div class="block3">
-        <img src="../styles/images/Dima/Photo3-1.png" class="Photo3-1">
-        <div class="border3-1"></div>
-        <span class="text3-1"><i class="fa-solid fa-file-image"></i></span>
-        <div class="scroll3-1"></div>
-        <div class="scroll3-2"></div>
-        <span class="text3-2">Bananas Foster Ice Cream Cake</span>
-        <span class="text3-3">1 (8 ounce) container frozen whipped topping, thawed 20 chocolate round wafers, divided</span>
-        <span class="text3-4">1 (7 1/4 ounce) bottle Smucker's® Hot Dark Chocolate Microwaveable Topping, divided</span>
-        <span class="text3-5">Directions</span>
-        <span class="text3-6">ARRANGE 8 to 9 ice cream sandwiches in 9-inch square pan, cutting to form an even layer. Spread with half of whipped topping. Break or crush chocolate and sprinkle over the whipped cream. Microwave 1 cup of chocolate into small microwave-safe bowl on HIGH for 30 seconds.</span>
-        <span class="text3-7">Drizzle evenly over wafers.</span>
-        <span class="text3-8">TOP with remaining 8 to 9 ice cream sandwiches to form an even layer. </span>
-        <span class="text3-9">Spread with remaining topping. Freeze 3 hours or overnight. Remove</span>
-        <span class="text3-10">15mins</span>
-        <span class="text3-11"><i class="fa fa-regular fa-clock"></i></span>
-        <span class="text3-12">Easy</span>
-        <div class="bar3-1"></div>
-        <div class="bar3-2"></div>
-        <div class="bar3-3"></div>
-        <div class="bar3-4"></div>
-        <button class="btn3-1">SAVE RECIPE</button>
+        <div class="left-panel2">
+            <span class="text3-1"><i class="fa-solid fa-file-image"></i></span>
+            <div class="border3-1"></div>
+        </div>
+        <div class="right-panel2">
+            <span class="text3-2">Bananas Foster Ice Cream Cake</span>
+            <div class="info3-1">
+                <div class="info-left3">
+                    <span class="text3-11"><i class="fa fa-regular fa-clock"></i></span>
+                    <span class="text3-10">15mins</span>
+                    <div class="bars">
+                        <div class="bar3-1"></div>
+                        <div class="bar3-2"></div>
+                        <div class="bar3-3"></div>
+                        <div class="bar3-4"></div>
+                    </div>
+                    <span class="text3-12">Easy</span>
+                </div>
+                <button class="btn3-1">SAVE RECIPE</button>
+            </div>
+            <div class="text-3">
+                <div class="text-container-3">
+                    <span class="text3-3">1 (8 ounce) container frozen whipped topping, thawed 20 chocolate round wafers, divided</span>
+                    <span class="text3-4">1 (7 1/4 ounce) bottle Smucker's® Hot Dark Chocolate Microwaveable Topping, divided</span>
+                    <span class="text3-5">Directions</span>
+                    <span class="text3-6">ARRANGE 8 to 9 ice cream sandwiches in 9-inch square pan, cutting to form an even layer. Spread with half of whipped topping. Break or crush chocolate and sprinkle over the whipped cream. Microwave 1 cup of chocolate into small microwave-safe bowl on HIGH for 30 seconds.</span>
+                    <span class="text3-7">Drizzle evenly over wafers.</span>
+                    <span class="text3-8">TOP with remaining 8 to 9 ice cream sandwiches to form an even layer. </span>
+                    <span class="text3-9">Spread with remaining topping. Freeze 3 hours or overnight. Remove</span>
+                </div>
+                <div class="scroll">
+                    <div class="scroll3-1"></div>
+                    <div class="scroll3-2"></div>
+                </div>
+            </div>
+        </div>
     </div>
 
-    <div class="block4">
-        <img src="../styles/images/Dima/Photo4-1.png" class="Photo4-1">
-        <div class="bar4-1"></div>
-        <span class="text4-1">404</span>
-        <span class="text4-2">Sorry</span>
-        <span class="text4-3">WE COULDN’T FIND THE PAGE</span>
-        <img src="../styles/images/Dima/Photo4-2.png" class="Photo4-2">
-        <button class="btn4-1">BACK</button>
+    <div class="blocks4-5">
+
+        <div class="block4">
+            <span class="text4-1">404</span>
+            <div class="bar4-1"></div>
+            <div class="plate-text">
+                <span class="text4-2">Sorry</span>
+                <span class="text4-3">WE COULDN’T FIND THE PAGE</span>
+                <img src="../styles/images/Dima/Photo4-2.png" class="Photo4-2">
+            </div>
+            <div class="btn4-container">
+                <button class="btn4-1">BACK</button>
+            </div>
+        </div>
+
+        <div class="block5">
+            <span class="text5-1">Author</span>
+            <div class="bar5-1"></div>
+            <div class="author-text">
+                <img src="../styles/images/Dima/Photo5-1.png" class="Photo5-1">
+                <div class="right-panel3">
+                    <span class="text5-2">Karen Gray</span>
+                    <span class="text5-3">United States</span>
+                    <div class="social-links-5">
+                        <a href="https://www.google.com/" target="_blank"><span class="google5"><i class="fab fa-google-plus-g"></i></span></a>
+                        <a href="https://www.twitter.com/" target="_blank"><span class="twitter5"><i class="fa-brands fa-twitter"></i></span></a>
+                        <a href="https://www.facebook.com/" target="_blank"><span class="facebook5"><i class="fa-brands fa-facebook-f"></i></span></a>
+                        <a href="https://www.pinterest.com/" target="_blank"><span class="pinterest5"><i class="fa-brands fa-pinterest"></i></span></a>
+                    </div>
+                    <div class="bar5-2"></div>
+                    <span class="text5-4">About Lemon</span>
+                    <span class="text5-5">Over the fifteen-year life span of Food.com, we’ve learned that – in addition to eating – sharing is what you do best. And thanks to the 20 million of you who come here each month, we now have 500,000 recipes to show for it, more than anywhere else in the digital universe. We also have tons crazy-tempting photos, troves of recipe reviews and more than 2 million Facebook likes. That’s a heck of a lot of Food. Thank you!</span>
+                    <img src="../styles/images/Dima/Photo5-2.png" class="Photo5-2">
+                </div>
+            </div>
+        </div>
     </div>
-
-    <div class="block5">
-        <div class="bar5-1"></div>
-        <div class="bar5-2"></div>
-        <span class="text5-1">Karen Gray</span>
-        <span class="text5-2">United States</span>
-        <span class="text5-3">About Lemon</span>
-        <span class="text5-4">Over the fifteen-year life span of Food.com, we’ve learned that – in addition to eating – sharing is what you do best. And thanks to the 20 million of you who come here each month, we now have 500,000 recipes to show for it, more than anywhere else in the digital universe. We also have tons crazy-tempting photos, troves of recipe reviews and more than 2 million Facebook likes. That’s a heck of a lot of Food. Thank you!</span>
-        <span class="text5-5">Author</span>
-        <img src="../styles/images/Dima/Photo5-1.png" class="Photo5-1">
-        <img src="../styles/images/Dima/Photo5-2.png" class="Photo5-2">
-        <a href="https://www.google.com/" target="_blank"><span class="google5"><i class="fab fa-google-plus-g"></i></span></a>
-        <a href="https://www.twitter.com/" target="_blank"><span class="twitter5"><i class="fa-brands fa-twitter"></i></span></a>
-        <a href="https://www.facebook.com/" target="_blank"><span class="facebook5"><i class="fa-brands fa-facebook-f"></i></span></a>
-        <a href="https://www.pinterest.com/" target="_blank"><span class="pinterest5"><i class="fa-brands fa-pinterest"></i></span></a>
-    </div>
-
-
 </div>
 
 <div class = "IVAN">
