changes for mazura

--- a/templates/index.html
+++ b/templates/index.html
@@ -196,6 +196,7 @@
 </div>
 
 <div class = "IVAN">
+
     <div class="block6">
         <span class="text6-1"> Chi-Chi or Chichi </span>
         <img src="../styles/images/Ivan/girl.png" class="photo6-1">
@@ -308,47 +309,102 @@
     <div class="block11">
         <span class="text first">Tags </span>
         <div class="line one"></div>
-        <span class="text11-1-1">#yummy   #sweet   #dinner   #lunch</span>
-        <span class="text11-1-2">#breakfast   #fresh   #tasty   #delish</span>
-        <span class="text11-1-3">#delicious   #eating   #food</span>
+        <div class="spanz">
+            <span class="text11-1-1">#yummy   #sweet   #dinner   #lunch</span>
+            <span class="text11-1-2">#breakfast   #fresh   #tasty   #delish</span>
+            <span class="text11-1-3">#delicious   #eating   #food</span>
+        </div>
     </div>
     <div class="block12">
         <span class="text second">Calendar</span>
         <div class="line two"></div>
-        <a href="рпи" onclick="return false"><span class="text12-1">&#60;</span></a>
-        <a href="рпи" onclick="return false"><span class="text12-2">&#62;</span></a>
-        <span class="text12-3">June 2017</span>
+        <div class="spcal">
+            <a href="рпи" onclick="return false"><span class="text12-1">&#60;</span></a>
+            <span class="text12-3">June 2017</span>
+            <a href="рпи" onclick="return false"><span class="text12-2">&#62;</span></a>
+        </div>
         <span class="text12-4"><ins>Su</ins>     <ins>Mo</ins>     <ins>Tu</ins>     <ins>We</ins>     <ins>Th</ins>     <ins>Fr</ins>     <ins>Sa</ins></span>
-        <img src="../styles/images/Artyom/calendar.png" alt="" class="calendar">
+        <div class="calendar">
+            <span class="gr">28</span>
+            <span class="gr">29</span>
+            <span class="gr">30</span>
+            <span class="gr">31</span>
+            <span class="bl">1</span>
+            <span class="bl">2</span>
+            <span class="bl">3</span>
+            <span class="bl">4</span>
+            <span class="bl">5</span>
+            <span class="bl">6</span>
+            <span class="bl">7</span>
+            <span class="bl">8</span>
+            <span class="bl">9</span>
+            <span class="bl">10</span>
+            <span class="bl">11</span>
+            <span class="bl">12</span>
+            <span class="bl">13</span>
+            <span class="bl">14</span>
+            <span class="bl">15</span>
+            <span class="bl">16</span>
+            <span class="bl">17</span>
+            <span class="bl">18</span>
+            <span class="bl">19</span>
+            <span class="bl">20</span>
+            <span class="bl">21</span>
+            <span class="bl">22</span>
+            <span class="bl">23</span>
+            <span class="bl">24</span>
+            <span class="bl">25</span>
+            <span class="bl">26</span>
+            <span class="bl">27</span>
+            <span class="bl">28</span>
+            <span class="bl">29</span>
+            <span class="bl">30</span>
+            <span class="gr">1</span>
+        </div>
     </div>
-    <div class="block13">
-        <span class="text third">Login</span>
-        <div class="line three"></div>
-        <span class="text13-1">Login for LEMON</span>
-        <input type="text" class="login" placeholder="email or login">
-        <input type="text" class="password" placeholder="password">
-        <input type="checkbox" class="chbox">
-        <span class="text13-2">Remember me</span>
-        <button class="btlogin">login</button>
-        <a href="рпи" onclick="return false"><span class="text13-4">Forgot your password?</span></a>
-        <a href="https://facebook.com" target="_blank"><span class="facebook"><i class="fab fa-facebook-f"></i></span></a>
-        <a href="https://gmail.com" target="_blank"><span class="g"><i class="fab fa-google-plus-g"></i></span></a>
-        <span class="text13-5">Don’t have an accont? <a href="рпи" onclick="return false">Sign in</a></span>
-    </div>
-    <div class="block14">
-        <span class="text fourth">Sign in</span>
-        <div class="line three"></div>
-        <span class="text14-1">Sign in for LEMON</span>
-        <input type="text" class="login" placeholder="email">
-        <input type="text" class="usname" placeholder="user name">
-        <input type="text" class="password2" placeholder="password">
-        <input type="text" class="rppassword" placeholder="repeat password">
-        <button class="btsignup">sign up</button>
-        <a href="https://facebook.com" target="_blank"><span class="facebook2"><i class="fab fa-facebook-f"></i></span></a>
-        <a href="https://gmail.com" target="_blank"><span class="g2"><i class="fab fa-google-plus-g"></i></span></a>
-        <span class="text14-5">By joining LEMON, you agree to our </span>
-        <a href="../styles/images/123.jpg" target="_blank"><span class="text14-6">Terms of Service.</span></a>
-        <a href="рпи" onclick="return false"><span class="text14-7">login</span></a>
+    <div class="authorization">
+        <div class="block13">
+            <span class="text third">Login</span>
+            <div class="line three"></div>
+            <span class="text13-1">Login for LEMON</span>
+            <div class="inputs">
+                <input type="text" class="login" placeholder="email or login">
+                <input type="text" class="password" placeholder="password">
+            </div>
+            <div class="flex1">
+                <input type="checkbox" class="chbox">
+                <span class="text13-2">Remember me</span>
+                <a href="рпи" onclick="return false" class="a1"><span class="text13-4">Forgot your password?</span></a>
+            </div>
+            <button class="btlogin">login</button>
+            <div class="social">
+                <a href="https://facebook.com" target="_blank"><span class="facebook"><i class="fab fa-facebook-f"></i></span></a>
+                <a href="https://gmail.com" target="_blank" class="a2"><span class="g"><i class="fab fa-google-plus-g"></i></span></a>
+            </div>
+            <span class="text13-5">Don’t have an accont? <a href="рпи" onclick="return false">Sign in</a></span>
+        </div>
+        <div class="block14">
+            <span class="text fourth">Sign in</span>
+            <div class="line three"></div>
+            <span class="text14-1">Sign in for LEMON</span>
+            <div class="inputs">
+                <input type="text" class="login" placeholder="email">
+                <input type="text" class="usname" placeholder="user name">
+                <input type="text" class="password2" placeholder="password">
+                <input type="text" class="rppassword" placeholder="repeat password">
+            </div>
+            <button class="btsignup">sign up</button>
+            <div class="social l">
+                <a href="https://facebook.com" target="_blank"><span class="facebook2"><i class="fab fa-facebook-f"></i></span></a>
+                <a href="https://gmail.com" target="_blank" class="a3"><span class="g2"><i class="fab fa-google-plus-g"></i></span></a>
+            </div>
+            <div class="flexspan">
+                <span class="text14-5">By joining LEMON, you agree to our </span>
+                <a href="../styles/images/123.jpg" target="_blank"><span class="text14-6">Terms of Service.</span></a>
+                <a href="рпи" onclick="return false" class="log"><span class="text14-7">login</span></a>
+            </div>
+            
+        </div> 
     </div>
 </div>
 
