--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1753,6 +1753,7 @@ body {
     position: absolute;
     top: 2840px;
     left: 585px;
+    padding-top: 26px;
 }
 .text {
     color: #000000;
@@ -1766,64 +1767,71 @@ body {
     font-style: normal;
     letter-spacing: 0.5px;
     line-height: normal;
-    position: absolute;
     transform: skew(-7deg)
 }
 .first {
     width: 36px;
     height: 19px;
-    top: 26px;
-    left: 17px;
+    margin-left: 17px;
 }
 .second {
     width: 76px;
     height: 17px;
-    top: 26px;
-    left: 17px;
+    margin-left: 17px;
 }
 .third {
     width: 45px;
     height: 19px;
-    top: 19px;
-    left: 31px;
+    margin-left: 31px;
 }
 .fourth {
     width: 70px;
     height: 20px;
-    top: 18px;
-    left: 30px;
+    margin-left: 30px;
 }
 .line {
     height: 2px;
     background-color: #555555;
     opacity: 0.2;
-    position: absolute;
+}
+.spanz {
+    display: flex;
+    flex-direction: column;
+    margin-left: 23px;
 }
 .one {
     width: 252px;
-    top: 50px;
-    left: 17px;
+    margin-top: 5px;
+    margin-left: 17px;
+    margin-bottom: 15px;
 }
 .two {
     width: 252px;
-    top: 54px;
-    left: 17px;
+    margin-top: 7px;
+    margin-left: 17px;
+    margin-bottom: 22px;
 }
 .three {
     width: 271px;
-    top: 46px;
-    left: 25px;
+    margin-top: 8px;
+    margin-left: 25px;
+    margin-bottom: 29px;
 }
 .last {
     top: 46px;
     left: 25px;
 }
+.spcal {
+    display: flex;
+    margin-left: 31px;
+    margin-bottom: 31px;
+}
 .text11-1-1 {
     width: 237px;
-    height: 68px;
+    height: 12.5px;
     color: #000000;
     font-family: "Josefin Sans";
-    font-size: 12px;
+    font-size: 12.5px;
     font-weight: 350;
     font-style: normal;
     /*letter-spacing: normal;*/
@@ -1831,16 +1839,13 @@ body {
     text-align: left;
     text-transform: uppercase;
     line-height: normal;
-    position: absolute;
-    top: 63px;
-    left: 23px;
 }
 .text11-1-2 {
     width: 237px;
-    height: 68px;
+    height: 12.5px;
     color: #000000;
     font-family: "Josefin Sans";
-    font-size: 12px;
+    font-size: 12.5px;
     font-weight: 350;
     font-style: normal;
     /*letter-spacing: normal;*/
@@ -1848,16 +1853,14 @@ body {
     text-align: left;
     text-transform: uppercase;
     line-height: normal;
-    position: absolute;
-    top: 93px;
-    left: 23px;
+    margin-top: 20px;
 }
 .text11-1-3 {
     width: 237px;
-    height: 68px;
+    height: 12.5px;
     color: #000000;
     font-family: "Josefin Sans";
-    font-size: 12px;
+    font-size: 12.5px;
     font-weight: 350;
     font-style: normal;
     /*letter-spacing: normal;*/
@@ -1865,9 +1868,7 @@ body {
     text-align: left;
     text-transform: uppercase;
     line-height: normal;
-    position: absolute;
-    top: 123px;
-    left: 23px;
+    margin-top: 20px;
 }
 .block12 {
     width: 290px;
@@ -1877,6 +1878,7 @@ body {
     position: absolute;
     top: 3050px;
     left: 585px;
+    padding-top: 26px;
 }
 .text12-1 {
     width: 5px;
@@ -1907,9 +1909,7 @@ body {
     font-style: normal;
     letter-spacing: 0.35px;
     line-height: normal;
-    position: absolute;
-    top: 81px;
-    left: 252px;
+    margin-left: 67px;
 }
 .text12-3 {
     width: 80px;
@@ -1922,9 +1922,7 @@ body {
     font-style: normal;
     letter-spacing: 0.45px;
     line-height: normal;
-    position: absolute;
-    top: 78px;
-    left: 103px;
+    margin-left: 67px;
 }
 .text12-4 {
     width: 222px;
@@ -1938,9 +1936,7 @@ body {
     line-height: normal;
     text-align: left;
     letter-spacing: 0.35px;
-    position: absolute;
-    top: 125px;
-    left: 33px;
+    margin-left: 33px;
     transform: skew(-7deg);
     word-spacing: 10px;
 }
@@ -1966,18 +1962,36 @@ body {
     left: 33px;
 }
 .calendar {
-    position: absolute;
-    top: 161px;
-    left: 33px;
+    margin-top: 15px;
+    margin-left: 36px;
+    display: grid;
+    grid-template-columns: 14.3% 14.3% 14.3% 14.3% 14.3% 14.3% 14.3%;
+    grid-template-rows: 34px 34px 34px 34px 34px;
+    font-family: 'Josefin Sans';
+    font-size: 14px;
+    line-height: 40px;
+    font-weight: 400;
+    letter-spacing: 0.025em;
+    width: 225px;
+    height: 170px;
+}
+.gr {
+    color: #9e9e9e;
+}
+.bl {
+    color: #000000;
+}
+.authorization {
+    margin-top: 1230px;
+    display: flex;
 }
 .block13 {
     width: 328px;
     height: 406px;
     box-shadow: 0 0 13px rgba(0, 0, 0, 0.15);
     background-color: #ffffff;
-    position: absolute;
-    top: 3515px;
-    left: 340px;
+    margin-left: 340px;
+    padding-top: 20px;
 }
 .text13-1 {
     width: 145px;
@@ -1993,9 +2007,8 @@ body {
     font-style: normal;
     letter-spacing: 0.1px;
     line-height: normal;
-    position: absolute;
-    top: 77px;
-    left: 30px;
+    
+    margin-left: 30px;
 }
 .login {
     width: 265px;
@@ -2003,9 +2016,6 @@ body {
     box-shadow: inset 1px 2px 2px rgba(11, 12, 12, 0.37);
     border: 1px solid #c2c2c2;
     background-color: #ffffff;
-    position: absolute;
-    top: 116px;
-    left: 32px;
 }
 .login, .usname, .password2, .rppassword {
     color: #000000;
@@ -2047,16 +2057,11 @@ body {
     height: 40px;
     border: 1px solid #c2c2c2;
     background-color: #ffffff;
-    position: absolute;
-    top: 176px;
-    left: 32px;
+    margin-top: 20px;
 }
 .chbox {
     width: 10px;
     height: 10px;
-    position: absolute;
-    top: 231px;
-    left: 32px;
     border: 1px solid #c2c2c2;
     background-color: #ffffff;
     border-radius: 20%;
@@ -2075,17 +2080,15 @@ body {
     text-align: left;
     letter-spacing: 0.3px;
     transform: skew(-7deg);
-    position: absolute;
-    top: 234px;
-    left: 48px;
+    margin-left: 4px;
+    margin-top: 4px;
 }
 .btlogin {
     width: 105px;
     height: 28px;
     border: 1px solid #c2c2c2;
-    position: absolute;
-    top: 277px;
-    left: 112px;
+    margin-left: 112px;
+    margin-bottom: 22px;
     background-color: #ffffff;
     color: #000000;
     font-family: "Josefin Sans";
@@ -2102,9 +2105,9 @@ body {
     width: 105px;
     height: 28px;
     border: 1px solid #c2c2c2;
-    position: absolute;
-    top: 351px;
-    left: 112px;
+    margin-top: 10px;
+    margin-left: 113px;
+    margin-bottom: 20px;
     background-color: #ffffff;
     color: #000000;
     font-family: "Josefin Sans";
@@ -2124,7 +2127,7 @@ button:hover {
 
 .text13-4 {
     width: 150px;
-    height: 10px;
+    height: 8px;
     opacity: 0.54;
     color: #000000;
     font-family: "Josefin Sans";
@@ -2136,15 +2139,16 @@ button:hover {
     text-align: left;
     letter-spacing: 0.3px;
     transform: skew(-7deg);
-    position: absolute;
-    top: 234px;
-    left: 178px;
-
+}
+.a1 {
+    margin-left: 30px;
+}
+.flex1 {
+    display: flex; 
+    margin-left: 32px; 
+    margin-bottom: 33px;  
 }
 .facebook {
-    position: absolute;
-    top: 327px;
-    left: 135px;
     width: 12px;
     height: 22px;
     color: #555555;
@@ -2157,10 +2161,11 @@ button:hover {
     text-align: left;
     letter-spacing: 0.3px;
 }
+.log {
+    margin-top: 13px;
+}
+
 .facebook2 {
-    position: absolute;
-    top: 399px;
-    left: 137px;
     width: 12px;
     height: 22px;
     color: #555555;
@@ -2174,29 +2179,34 @@ button:hover {
     letter-spacing: 0.3px;
 }
 .g {
-    position: absolute;
-    top: 330px;
-    left: 169px;
     width: 29px;
     height: 19px;
     color: #555555;
     font-family: "Font Awesome";
-    font-size: 22px;
+    font-size: 24px;
     font-weight: 400;
     font-style: normal;
     letter-spacing: normal;
     text-align: left;
     letter-spacing: 0.55px;
 }
+.social {
+    display: flex;
+    margin-left: 135px;
+    margin-bottom: 12px;
+}
+.a2 {
+    margin-left: 22px;
+}
+.a3 {
+    margin-left: 22px; 
+}
 .g2 {
-    position: absolute;
-    top: 402px;
-    left: 171px;
     width: 29px;
     height: 19px;
     color: #555555;
     font-family: "Font Awesome";
-    font-size: 22px;
+    font-size: 24px;
     font-weight: 400;
     font-style: normal;
     letter-spacing: normal;
@@ -2216,9 +2226,7 @@ button:hover {
     line-height: normal;
     text-align: left;
     letter-spacing: 0.4px;
-    position: absolute;
-    top: 367px;
-    left: 64px;
+    margin-left: 60px;
     transform: skew(-7deg);
 }
 .block14 {
@@ -2226,9 +2234,8 @@ button:hover {
     height: 535px;
     box-shadow: 0 0 13px rgba(0, 0, 0, 0.15);
     background-color: #ffffff;
-    position: absolute;
-    top: 3515px;
-    left: 755px;
+    margin-left: 85px;
+    padding-top: 18px;
 }
 .text14-1 {
     width: 145px;
@@ -2244,18 +2251,22 @@ button:hover {
     font-style: normal;
     letter-spacing: 0.1px;
     line-height: normal;
-    position: absolute;
-    top: 77px;
-    left: 30px;
+    margin-left: 29px;
+}
+
+.inputs {
+    display: flex;
+    flex-direction: column;
+    margin-top: 23px;
+    margin-left: 32px;
+    margin-bottom: 16px;
 }
 .usname {
     width: 265px;
     height: 40px;
     border: 1px solid #c2c2c2;
     background-color: #ffffff;
-    position: absolute;
-    top: 171px;
-    left: 32px;
+    margin-top: 15px;
 }
 .usname::placeholder {
     top: 14px;
@@ -2266,9 +2277,7 @@ button:hover {
     height: 40px;
     border: 1px solid #c2c2c2;
     background-color: #ffffff;
-    position: absolute;
-    top: 228px;
-    left: 32px;
+    margin-top: 15px;
 }
 .password2::placeholder {
     top: 14px;
@@ -2279,9 +2288,7 @@ button:hover {
     height: 40px;
     border: 1px solid #c2c2c2;
     background-color: #ffffff;
-    position: absolute;
-    top: 283px;
-    left: 32px;
+    margin-top: 15px;
 }
 .rppassword::placeholder {
     top: 14px;
@@ -2289,7 +2296,7 @@ button:hover {
 }
 .text14-5 {
     width: 240px;
-    height: 31px;
+    height: 14px;
     opacity: 0.54;
     color: #000000;
     font-family: "Josefin Sans";
@@ -2300,14 +2307,19 @@ button:hover {
     text-align: left;
     font-style: normal;
     letter-spacing: 0.2px;
-    position: absolute;
-    top: 448px;
-    left: 35px;
     transform: skew(-7deg);
 }
+.l {
+    margin-bottom: 27px;
+}
+.flexspan {
+    display: flex;
+    flex-direction: column;
+    margin-left: 37px;
+}
 .text14-6 {
-    width: 216px;
-    height: 31px;
+    width: 200px;
+    height: 14px;
     color: #002dd6;
     font-family: "Josefin Sans";
     font-size: 14px;
@@ -2316,9 +2328,6 @@ button:hover {
     letter-spacing: 0.35px;
     line-height: normal;
     text-decoration: underline;
-    position: absolute;
-    top: 463px;
-    left: 35px;
     transform: skew(-7deg);
 }
 .text14-7 {
@@ -2333,9 +2342,6 @@ button:hover {
     text-transform: uppercase;
     font-style: normal;
     letter-spacing: 0.3px;
-    position: absolute;
-    top: 494px;
-    left: 39px;
 }
 
 /* ===================PASHASASHSHASHA============= */
